--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,9 @@
         "browser": true,
         "node": true
     },
+    "globals": {
+      "__DEV__": true
+    },
     "plugins": [
         "react"
     ],
