--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@storybook/react-native": "^3.1.9",
     "babel-eslint": "^7.2.3",
     "eslint": "^4.2.0",
     "eslint-plugin-react": "^7.1.0",
     "jest-expo": "~18.0.0",
+    "react-dom": "16.0.0-alpha.12",
     "react-native-scripts": "0.0.50",
-    "react-test-renderer": "16.0.0-alpha.12",
-    "@storybook/react-native": "^3.1.9",
-    "react-dom": "16.0.0-alpha.12"
+    "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -30,6 +30,7 @@
     "native-base": "2.2.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.45.1",
+    "react-native-app-intro": "^1.1.5",
     "react-navigation": "^1.0.0-beta.11"
   }
 }
